--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,54 @@
-.App {
+@import './data/variables.scss';
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html,
+body {
+  padding: 0 1rem;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
+  background-color: $colourBlue;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  border: 2px solid black;
+  border-radius: 0.5rem;
+  background-color: antiquewhite;
+  width: 100%;
+  padding: 0.5rem 1rem;
 
-.App-link {
-  color: #61dafb;
-}
+  &_option {
+    background-color: lightgray;
+    margin: 0.5rem 0;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    transition: 1s;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    &:hover {
+      background-color: grey;
+      cursor: pointer;
+      transform: scale(1.05);
+    }
+
+    & span:first-of-type {
+      font-weight: 700;
+    }
   }
 }
